add jmockit sample